--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
@@ -17,7 +18,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
-    "react-multi-carousel": "^2.8.4"
+    "react-multi-carousel": "^2.8.4",
+    "react-redux": "^8.1.3",
+    "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
