--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "next": "14.0.1",
