--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "clsx": "^2.0.0",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
