--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
     "universal-cookie": "^6.1.1"
