--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,24 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "overrides": [
+    {
+      "files": ["*.json"],
+      "parser": "espree",
+      "rules": {
+        "semi": "off" // Disable semicolon rules for JSON files
+      }
+    }
+  ]
 }
+// .eslintrc.json
+// {
+//   "overrides": [
+//     {
+//       "files": ["*.json"],
+//       "parser": "espree",
+//       "rules": {
+//         "semi": "off" // Disable semicolon rules for JSON files
+//       }
+//     }
+//   ]
+// }
