--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
+    "styled-components": "^6.1.13",
     "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
