--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prepare": "husky install",
     "lint": "next lint"
   },
   "dependencies": {
@@ -29,6 +30,8 @@
     "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -37,6 +40,7 @@
     "cypress": "^13.15.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
+    "husky": "^9.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
